<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crop_warning"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/crop_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_manual"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_auto"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/manual_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_manual_auto"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/auto_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_auto_manual"
            android:textSize="20sp" />
    </RadioGroup>

</LinearLayout>
