<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crop_borders"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:shrinkColumns="1"
    tools:ignore="DuplicateIds">

    <TableRow android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/crop_left"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/crop_minus"
            style="@style/Viewer_Dialog_Icon"
            app:srcCompat="@drawable/new_minus" />

        <TextView
            android:id="@+id/crop_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/crop_plus"
            style="@style/Viewer_Dialog_Icon"
            app:srcCompat="@drawable/new_plus" />
    </TableRow>

    <TableRow android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/crop_right"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/crop_minus"
            style="@style/Viewer_Dialog_Icon"
            app:srcCompat="@drawable/new_minus" />

        <TextView
            android:id="@+id/crop_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/crop_plus"
            style="@style/Viewer_Dialog_Icon"
            app:srcCompat="@drawable/new_plus" />
    </TableRow>

    <TableRow android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/crop_top"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/crop_minus"
            style="@style/Viewer_Dialog_Icon"
            app:srcCompat="@drawable/new_minus" />

        <TextView
            android:id="@+id/crop_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/crop_plus"
            style="@style/Viewer_Dialog_Icon"
            app:srcCompat="@drawable/new_plus" />
    </TableRow>

    <TableRow android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/crop_bottom"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/crop_minus"
            style="@style/Viewer_Dialog_Icon"
            app:srcCompat="@drawable/new_minus" />

        <TextView
            android:id="@+id/crop_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/crop_plus"
            style="@style/Viewer_Dialog_Icon"
            app:srcCompat="@drawable/new_plus" />
    </TableRow>

</TableLayout>
