<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:scrollbars="vertical"
    android:fillViewport="true">


    <LinearLayout android:layout_height="wrap_content" android:orientation="vertical"
                  android:layout_width="fill_parent" android:gravity="center">

        <HorizontalScrollView android:layout_height="wrap_content" android:layout_width="fill_parent">

            <LinearLayout android:layout_height="fill_parent" android:orientation="vertical"
                          android:layout_width="wrap_content" android:gravity="center">

                <RadioGroup android:id="@+id/layoutGroup" android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" android:gravity="center">

                    <RadioButton android:id="@+id/layout1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"/>

                    <ImageButton android:id="@+id/ilayout1"
                                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:clickable="false"
                                 app:srcCompat="@drawable/navigation1" android:layout_gravity="center"/>

                    <RadioButton android:id="@+id/layout2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"/>

                    <ImageButton android:id="@+id/ilayout2"
                                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:clickable="false"
                                 app:srcCompat="@drawable/navigation2"/>

                    <RadioButton android:id="@+id/layout3"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"/>

                    <ImageButton android:id="@+id/ilayout3"
                                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                                 android:clickable="false"
                                 app:srcCompat="@drawable/navigation3"/>
                </RadioGroup>


                <LinearLayout android:layout_height="wrap_content" android:orientation="horizontal"
                              android:layout_width="fill_parent" android:gravity="left">


                    <RadioGroup android:id="@+id/directionGroup" android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_gravity="left" android:gravity="center">

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" android:id="@+id/navigation_title"
                                  android:text="@string/navigation" android:textSize="22sp"
                                  android:layout_marginRight="5dp" android:layout_gravity="center_vertical" android:gravity="center"/>

                            <universe.constellation.orion.viewer.android.RadioButton android:id="@+id/walkOrder_ABCD"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content" app:walkOrder="@string/ABCD"/>

                            <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" android:text="ABCD"/>

                            <universe.constellation.orion.viewer.android.RadioButton android:id="@+id/walkOrder_ACBD"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content" app:walkOrder="@string/ACBD"/>

                            <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" android:text="ACBD"/>


                            <universe.constellation.orion.viewer.android.RadioButton android:id="@+id/walkOrder_BADC"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content" app:walkOrder="@string/BADC"/>

                            <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" android:text="BADC"/>

                            <universe.constellation.orion.viewer.android.RadioButton android:id="@+id/walkOrder_BDAC"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content" app:walkOrder="@string/BDAC"/>

                            <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content" android:text="BDAC"/>

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout android:layout_height="wrap_content" android:orientation="horizontal"
                      android:layout_width="fill_parent" android:gravity="right">
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         app:srcCompat="@drawable/new_apply" android:id="@+id/options_apply"
                         android:layout_gravity="right"/>
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         app:srcCompat="@drawable/new_revert" android:id="@+id/options_close"
                         android:layout_gravity="right"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
